<resources>
    <string name="app_name">BookQuiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules">match the cover of the book with its first line</string>
    <string name="play">play</string>
    <string name="background_books">background books</string>
    <string name="image_magick_books">image magick books</string>
    <string name="answer_1">answer 1</string>
    <string name="answer_2">answer 2</string>
    <string name="answer_3">answer 3</string>
    <string name="play_again">play again</string>
    <string name="anna_karenina">Happy families are all alike; every unhappy family is unhappy in its own way.</string>
    <string name="pride_and_prejudice">It is a truth universally acknowledged, that a single man in possession of a good fortune, must be in want of a wife.</string>
    <string name="lord_of_the_flies">The boy with fair hair lowered himself down the last few feet of rock and began to pick his way toward the lagoon.</string>
    <string name="ten_little_negroes">In the corner of a first-class smoking carriage, Mr. Justice Wargrave, lately retired from the bench, puffed at a cigar and ran an interested eye through the political news in the Times.</string>
    <string name="crime_and_punishment">On an exceptionally hot evening early in July a young man came out of the garret in which he lodged in S. Place and walked slowly, as though in hesitation, towards K. bridge.</string>
    <string name="the_picture_of_dorian_gray">The studio was filled with the rich odor of roses, and when the light summer wind stirred amidst the trees of the garden there came through the open door the heavy scent of the lilac, or the more delicate perfume of the pinkflowering thorn.</string>
    <string name="the_little_prince">Once when I was six years old I saw a magnificent picture in a book, called True Stories from Nature, about the primeval forest. It was a picture of a boa constrictor in the act of swallowing an animal.</string>
    <string name="two_leagues_under_the_sea">The year 1866 was signalized by a remarkable incident, a mysterious and puzzling phenomenon, which doubtless no one has yet forgotten.</string>
    <string name="the_old_man_and_the_sea">He was an old man who fished alone in a skiff in the Gulf Stream, and he had gone eighty-four days now without taking a fish.</string>
    <string name="the_master_and_margarita">At the sunset hour of one warm spring day two men were to be seen at Patriarch\'s Ponds.</string>
    <string name="the_adventures_of_sherlock_holmes">To Sherlock Holmes she is always the woman.</string>
    <string name="the_great_gatsby">In my younger and more vulnerable years my father gave me some advice that I’ve been turning over in my mind ever since.</string>
    <string name="number_of_correct_answer">Number of correct answers: <u>%s</u></string>
</resources>