<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".startFragment.StartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/background_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minus_blue_background"
            android:src="@drawable/books_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/background_books" />

        <ImageView
            android:id="@+id/magick_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/magick_books"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_magick_books" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12dp"
            android:layout_marginTop="@dimen/_22dp"
            android:layout_marginEnd="@dimen/_12dp"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:padding="@dimen/small_padding_8dp"
            android:text="@string/rules"
            android:textAllCaps="true"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/big_string_48"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/button_play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/magick_books"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_22dp"
            android:layout_marginTop="@dimen/_22dp"
            android:layout_marginEnd="@dimen/_22dp"
            android:layout_marginBottom="@dimen/_22dp"
            android:background="@drawable/corner_button"
            android:text="@string/play"
            android:textColor="@color/white"
            android:textSize="@dimen/mediun_text_size_30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>